--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,6 +1,6 @@
 
 
-<% provide(:title, 'Home') %> 
+<%# provide(:title, 'Home') %> 
 <div class="center hero-unit">
   <h1>Welcome to the Sample App</h1>
 
