--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,11 +1,10 @@
 <footer class="footer">
   <small>
-    <a>Associations</a>
-    by UTBM
+    <a>Assoc' Belfort</a>
   </small>
   <nav>
     <ul>
-      <li><%= link_to "About",  about_path %></li>
+      <li><%= link_to "A propos",  about_path %></li>
       <li><%= link_to "Contact", contact_path %></li>
     </ul>
   </nav>
