--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,12 +1,12 @@
 <header class= "navbar navbar-fixed-top">
 	<div class="navbar-inner">
 		<div class="container">
-			<%= link_to "Associations de la ville de Belfort", root_path, id: "logo" %>
+			<%= link_to "Assoc' Belfort", root_path, id: "logo" %>
 			<nav>
 
 				<ul class="nav pull-right">
-					<li><%= link_to "Home", root_path %></li>
-					<li><%= link_to "Help", help_path %></li>
+					<li><%= link_to "Accueil", root_path %></li>
+					<li><%= link_to "Liste des associations", help_path %></li>
 					<% if signed_in? %>
 					<li><%= link_to "Users", users_path %></li>
 					<li id="fat-menu" class="dropdown">
@@ -23,7 +23,7 @@
 						</ul>
 					</li>
 					<% else %>
-					<li><%= link_to "Sign in", signin_path %></li>
+					<li><%= link_to "Se connecter", signin_path %></li>
 					<% end %>
 				</ul>
 			</nav>
