--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,8 +1,5 @@
-<% provide(:title, 'About Us') %>
-    <h1>About Us</h1>
+<% provide(:title, 'A propos') %>
+    <h1>A propos</h1>
     <p>
-      The <a href="http://railstutorial.org/">Ruby on Rails Tutorial</a>
-      is a project to make a book and screencasts to teach web development
-      with <a href="http://rubyonrails.org/">Ruby on Rails</a>. This
-      is the sample application for the tutorial. aze
+     Ce projet à été exécuté par Jaafar Lounes sous la coordination de Mme Carilee Chambreuil. Pour plus d'informations <%= link_to "Contactez nous.", contact_path %>
     </p>
