--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,6 +1,5 @@
 <% provide(:title, 'Contact') %>
 <h1>Contact</h1>
 <p>
-  Contact Ruby on Rails Tutorial about the sample app at the
-  <a href="http://railstutorial.org/contact">contact page</a>.
+  Contactez le créateur de l'application au mail jaafar.lounes@utbm.fr
 </p>
