--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,14 +1,14 @@
 
 
-<% provide(:title, 'Home') %> 
+<% provide(:title, 'Accueil') %> 
 <div class="center hero-unit">
-  <h1>Bienvenue sur Associations</h1>
+  <h1>Bienvenue</h1>
 
   <h2>
     Ceci est la page d'accueil
   </h2>
 
-  <%= link_to "Sign up now!", signup_path, class: "btn btn-large btn-primary" %>
+  <%= link_to "S'inscrire!", signup_path, class: "btn btn-large btn-primary" %>
 </div>
 
-<%= link_to image_tag("Logo_utbm.png", alt: "Rails"), 'http://rubyonrails.org/' %>
+<%= link_to image_tag("Logo_utbm.png", alt: "Rails", size: "100x120"), 'http://www.utbm.fr/' %>
