--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,22 +1,22 @@
-<% provide(:title, 'Edit user') %>
+<% provide(:title, 'Modifier utilisateur') %>
 <h1>Update your profile</h1>
 <div class="row">
 	<div class="span6 offset3">
 		<%= form_for(@user) do |f| %>
 		<%= render 'shared/error_messages' %>
-			<%= f.label :name %>
+			<%= f.label :name, "Nom" %>
 			<%= f.text_field :name %>
 
 			<%= f.label :email %>
 			<%= f.text_field :email %>
 
-			<%= f.label :password %>
+			<%= f.label :password, "Mot de passe" %>
 			<%= f.password_field :password %>
 
-			<%= f.label :password_confirmation, "Confirmation" %>
+			<%= f.label :password_confirmation, "Confirmation du mot de passe" %>
 			<%= f.password_field :password_confirmation %>
 
-			<%= f.submit "Save changes", class: "btn btn-large btn-primary" %>
+			<%= f.submit "Enregistrer les changements", class: "btn btn-large btn-primary" %>
 		<% end %>
 	</div>
 </div>
