--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,5 @@
-<% provide(:title, 'All users') %>
-<h1>All users</h1>
+<% provide(:title, 'Tous les utilisateurs') %>
+<h1>Tous les utilisateurs</h1>
 
 <%= will_paginate %>
 
