--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,18 +7,20 @@
 				<ul class="nav pull-right">
 					<li><%= link_to "Accueil", root_path %></li>
 					<li><%= link_to "Liste des associations", help_path %></li>
+					<li><%= link_to "Calendrier", calendar_path %></li>
 					<% if signed_in? %>
-					<li><%= link_to "Users", users_path %></li>
+					<li><%= link_to "Ajouter des evenements", events_path %></li>
+					<li><%= link_to "Liste des membres", users_path %></li>
 					<li id="fat-menu" class="dropdown">
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown">
 							Account <b class="caret"></b>
 						</a>
 						<ul class="dropdown-menu">
-							<li><%= link_to "Profile", current_user %></li>
-							<li><%= link_to "Settings", edit_user_path(current_user) %></li>
+							<li><%= link_to "Profil", current_user %></li>
+							<li><%= link_to "Options", edit_user_path(current_user) %></li>
 							<li class="divider"></li>
 							<li>
-								<%= link_to "Sign out", signout_path, method: "delete" %>
+								<%= link_to "Se deconnecter", signout_path, method: "delete" %>
 							</li>
 						</ul>
 					</li>
